syntax = "proto3";

package foo;

option go_package = "foopb";
option java_multiple_files = true;
option java_outer_classname = "FooProto";
option java_package = "com.foo";

enum One {
  ONE_INVALID = 0;
  ONE_ONE = 1;
}

enum OneBad {
  INVALID = 0;
  ONE = 1;
}

enum OneBadTwo {
  FOO = 0;
}

message Bar {
  enum One {
    ONE_INVALID = 0;
    ONE_ONE = 1;
  }

  enum OneBad {
    INVALID = 0;
    ONE = 1;
  }

  enum OneBadTwo {
    FOO = 0;
  }

  message Baz {
    enum One {
      ONE_INVALID = 0;
      ONE_ONE = 1;
    }

    enum OneBad {
      INVALID = 0;
      ONE = 1;
    }

    enum OneBadTwo {
      FOO = 0;
    }
  }
}
